<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sort_popular"
            android:icon="@drawable/ic_sort_popular"
            android:title="@string/sort_popular"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/sort_top_rated"
            android:icon="@drawable/ic_sort_top_rated"
            android:title="@string/sort_top_rated"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/sort_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/sort_favorite"
            app:showAsAction="ifRoom"/>
    </group>

</menu>