<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="movieViewModel"
            type="com.gregoriopalama.udacity.popularmovies.viewmodel.MovieViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionName="@string/movie_transition_string"
        tools:context="com.gregoriopalama.udacity.popularmovies.ui.detail.DetailActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:id="@+id/appbar">
            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:expandedTitleTextAppearance="@style/AppTheme.CollapsingToolbarExpanded">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/movie_big_poster_height"
                    android:scaleType="centerCrop"
                    android:id="@+id/movie_poster_big"
                    android:contentDescription="@{movieViewModel.movie.title}"
                    app:layout_collapseMode="parallax"
                    app:moviedb_image_url_big="@{movieViewModel.movie.backdropPath}"/>
                <FrameLayout
                    android:id="@+id/youtube_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/movie_big_poster_height"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone"
                    app:layout_collapseMode="parallax" />
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/poster_thumb"
                    android:layout_width="@dimen/movie_poster_width"
                    android:layout_height="wrap_content"
                    tools:layout_height="200dp"
                    android:layout_marginStart="@dimen/movie_horizontal_margin"
                    android:layout_marginTop="@dimen/movie_vertical_margin"
                    android:adjustViewBounds="true"
                    android:contentDescription="@{movieViewModel.movie.title}"
                    android:scaleType="fitCenter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:moviedb_image_url="@{movieViewModel.movie.posterPath}" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:textAppearance="@style/AppTheme.Label"
                    android:layout_marginStart="@dimen/movie_horizontal_margin"
                    android:layout_marginEnd="@dimen/movie_horizontal_margin"
                    android:text="@{movieViewModel.movie.title}"
                    app:layout_constraintTop_toTopOf="@id/poster_thumb"
                    app:layout_constraintStart_toEndOf="@id/poster_thumb"
                    app:layout_constraintEnd_toStartOf="@id/favorite"
                    tools:text="@string/tools_movie_title"/>

                <ImageView
                    android:id="@+id/favorite"
                    android:layout_width="@dimen/movie_favorite_size"
                    android:layout_height="@dimen/movie_favorite_size"
                    android:layout_marginEnd="@dimen/movie_horizontal_margin"
                    android:clickable="true"
                    android:focusable="true"
                    android:tint="@color/secondary_color"
                    android:contentDescription="@string/movie_favorite_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/poster_thumb"
                    app:srcCompat="@drawable/ic_favorite_border" />

                <TextView
                    android:id="@+id/release_date_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/movie_horizontal_margin"
                    android:layout_marginTop="@dimen/movie_vertical_margin"
                    android:textAppearance="@style/AppTheme.ReleaseDate"
                    android:text="@string/movie_lbl_release_date"
                    app:layout_constraintStart_toEndOf="@id/poster_thumb"
                    app:layout_constraintTop_toBottomOf="@id/title" />

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/movie_horizontal_margin"
                    android:layout_marginStart="@dimen/movie_horizontal_margin"
                    android:textAppearance="@style/AppTheme.ReleaseDate"
                    tools:text="@string/tools_movie_date"
                    app:release_date="@{movieViewModel.movie.releaseDate}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/release_date_lbl"
                    app:layout_constraintTop_toTopOf="@id/release_date_lbl"/>

                <TextView
                    android:id="@+id/vote_average"
                    android:layout_width="@dimen/movie_vote_average_size"
                    android:layout_height="@dimen/movie_vote_average_size"
                    android:layout_marginTop="@dimen/movie_vertical_margin"
                    android:gravity="center"
                    android:textAppearance="@style/AppTheme.VoteAverage"
                    android:textColor="@android:color/white"
                    android:background="@drawable/movie_vote_average_background"
                    app:vote_average="@{movieViewModel.movie.voteAverage}"
                    app:layout_constraintStart_toStartOf="@id/release_date_lbl"
                    app:layout_constraintTop_toBottomOf="@id/release_date_lbl"
                    tools:text="@string/tools_movie_average" />

                <ImageView
                    android:id="@+id/votes_number_image"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:tint="@color/primary_dark_color"
                    android:layout_marginStart="@dimen/movie_horizontal_margin"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/movie_votes_number"
                    app:layout_constraintStart_toEndOf="@id/vote_average"
                    app:layout_constraintTop_toTopOf="@id/vote_average"
                    app:layout_constraintBottom_toBottomOf="@id/vote_average"
                    app:srcCompat="@drawable/ic_person" />

                <TextView
                    android:id="@+id/votes_number"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/movie_votes_number_margin"
                    android:gravity="center"
                    android:textAppearance="@style/AppTheme.VotesNumber"
                    android:text="@{Integer.toString(movieViewModel.movie.voteCount)}"
                    app:layout_constraintStart_toEndOf="@id/votes_number_image"
                    app:layout_constraintTop_toTopOf="@id/vote_average"
                    app:layout_constraintBottom_toBottomOf="@id/vote_average"
                    tools:text="@string/tools_movie_votes_number"/>

                <TextView
                    android:id="@+id/no_connection_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/movie_horizontal_margin"
                    android:paddingRight="@dimen/movie_horizontal_margin"
                    android:layout_marginTop="@dimen/movie_overview_separator_margin_top"
                    android:paddingTop="@dimen/movie_overview_separator_margin_top"
                    android:paddingBottom="@dimen/movie_overview_separator_margin_top"
                    android:layout_marginBottom="@dimen/movie_vertical_margin"
                    android:visibility="gone"
                    android:background="@color/no_connection_message_background"
                    android:textAppearance="@style/AppTheme.NoConnectionMessage"
                    android:text="@string/movie_detail_no_connection_message"
                    app:layout_constraintTop_toBottomOf="@id/poster_thumb"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/videos_lbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/movie_horizontal_margin"
                    android:layout_marginStart="@dimen/movie_horizontal_margin"
                    android:layout_marginTop="@dimen/movie_vertical_margin"
                    android:textAppearance="@style/AppTheme.Label"
                    android:text="@string/movie_lbl_videos"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/no_connection_message"/>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/videos_card"
                    android:layout_marginEnd="@dimen/movie_horizontal_margin"
                    android:layout_marginStart="@dimen/movie_horizontal_margin"
                    android:layout_marginTop="@dimen/movie_vertical_margin"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/videos_lbl">
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/videos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/movie_horizontal_margin"
                        android:layout_marginStart="@dimen/movie_horizontal_margin"
                        android:layout_marginTop="@dimen/movie_vertical_margin"
                        android:layout_marginBottom="@dimen/movie_vertical_margin"
                        android:orientation="horizontal"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                        tools:listitem="@layout/movie_video"/>
                </android.support.v7.widget.CardView>


                <TextView
                    android:id="@+id/overview_lbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/movie_horizontal_margin"
                    android:layout_marginStart="@dimen/movie_horizontal_margin"
                    android:layout_marginTop="@dimen/movie_vertical_margin"
                    android:textAppearance="@style/AppTheme.Label"
                    android:text="@string/movie_lbl_overview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/videos_card" />

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/movie_horizontal_margin"
                    android:paddingRight="@dimen/movie_horizontal_margin"
                    android:layout_marginTop="@dimen/movie_overview_separator_margin_top"
                    android:paddingTop="@dimen/movie_overview_separator_margin_top"
                    android:paddingBottom="@dimen/movie_overview_separator_margin_top"
                    android:layout_marginBottom="@dimen/movie_vertical_margin"
                    android:text="@{movieViewModel.movie.overview}"
                    android:background="@color/overview_background"
                    tools:text="@string/tools_movie_overview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/overview_lbl"/>

                <TextView
                    android:id="@+id/reviews_lbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/movie_horizontal_margin"
                    android:layout_marginStart="@dimen/movie_horizontal_margin"
                    android:layout_marginTop="@dimen/movie_vertical_margin"
                    android:textAppearance="@style/AppTheme.Label"
                    android:text="@string/movie_lbl_reviews"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/overview" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:layout_marginTop="@dimen/movie_vertical_margin"
                    android:layout_marginBottom="@dimen/movie_vertical_margin"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/reviews_lbl"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:listitem="@layout/movie_review"/>

            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
</layout>
